<resources>
    <string name="app_name">GourmetGo!</string>
    <string name="Register">Registrarse</string>
    <string name="Name">Nombres</string>
    <string name="Lastname">Apellidos</string>
    <string name="Birthday">Fecha de nacimiento</string>
    <string name="Phone">Teléfono</string>
    <string name="Email">Correo electrónico</string>
    <string name="Password">Contraseña</string>
    <string name="Save">Registrar</string>
    <string name="Account">¿Ya tienes una cuenta?</string>
    <string name="Login">Inicia sesión</string>
    <string name="Title_Session">Iniciar sesión</string>
    <string name="Log_in">Iniciar Sesión</string>
    <string name="No_account">¿No tienes una cuenta?</string>
    <string name="Register_pag">Registrate</string>
    <string name="Guest">Ingresa como invitado</string>
    <string name="Login_Guest">Invitado</string>
    <string name="Name_User">Nombre de usuario</string>
    <string name="Profile">Perfil</string>
    <string name="Save_Users">Registros</string>
    <string name="Admin">Administrador</string>
    <string name="Detail">Detalle</string>
    <string name="Logout">Cerrar sesión</string>
    <string name="Update_Profile">Actualizar perfil</string>
    <string name="Update">Actualizar</string>
    <string name="Data_Room">Datos Room</string>
    <string name="Data">Datos</string>
    <string name="Data_Firebase">Datos Firebase</string>
    <string name="Main_Menu">Menú Principal</string>
    <string name="Category">Categorías</string>
    <string name="Popular_dishes">Platos Populares</string>
    <string name="SeeAll">Ver más</string>
    <string name="Cart">Carrito</string>
    <string name="Favorites">Favoritos</string>
    <string name="My_order">Mi orden</string>
    <string name="menu">Menu</string>
    <string name="search">Búsqueda</string>
    <string name="history">Historial</string>
    <string name="edit">Editar</string>
    <string name="validation_name">"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZáéíóúÁÉÍÓÚñÑüÜ "</string>
    <string name="validation_birthday">"1234567890/"</string>
    <string name="validation_phone">"1234567890"</string>
    <string name="validation_email">"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@._-"</string>
    <string name="validation_password">"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@._-"</string>
    <string name="Users">Usuarios</string>
    <string name="Back">Volver</string>
    <string name="Photo">Subir foto</string>
    <string name="List">Lista</string>
    <string name="Enter_Your_Discount_Code">Introduce tu código de descuento</string>
    <string name="Apply">Aplicar</string>
    <string name="Pay">$-</string>
    <string name="Delivery">Entrega</string>
    <string name="SubTotal">SubTotal</string>
    <string name="Total_Tax">Impuesto Total</string>
    <string name="Total">Total</string>
    <string name="Order">Ordenar</string>
    <string name="Remove">remove</string>
    <string name="Title">title</string>
    <string name="minus">-</string>
    <string name="Zero">0</string>
    <string name="Plus">+</string>
    <string name="Zero_Price">$0</string>
    <string name="ScanQr">Escanear Qr</string>
    <string name="no_results_title">No se encontraron resultados</string>
    <string name="no_results_subtitle">Intenta con otro término de búsqueda</string>
    <string name="initial_state_title">Busca en el menú</string>
    <string name="initial_state_subtitle">Escribe para comenzar la búsqueda</string>
    <string name="Qr">CodeQr</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">OK</string>
    <string name="kitchen">Cocina</string>
    <string name="waiter">Mesero</string>
</resources>