<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="center_vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title_Session"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:background="@drawable/logo"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="-35dp"
                android:layout_marginBottom="15dp"
                android:textColor="?attr/colorOnSurface"
                android:gravity="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/Email"
                app:startIconDrawable="@drawable/ic_form_email"
                app:boxStrokeColor="?attr/colorOnSurface"
                app:hintTextColor="?attr/colorOnSurface"
                app:counterEnabled="false"
                app:counterMaxLength="30"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="?attr/colorOnSurface"
                    android:digits="@string/validation_email"
                    android:maxLength="30"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Password"
                app:startIconDrawable="@drawable/ic_form_password"
                app:endIconMode="password_toggle"
                app:boxStrokeColor="?attr/colorOnSurface"
                app:hintTextColor="?attr/colorOnSurface"
                app:counterEnabled="false"
                app:counterMaxLength="20"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorOnSurface"
                    android:digits="@string/validation_password"
                    android:maxLength="20"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/Log_in"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/button_background"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/textAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/No_account"
                    android:textColor="?attr/colorOnSurface" />

                <TextView
                    android:id="@+id/RegisterLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/Register_pag"
                    android:textColor="?attr/colorSecondary"
                    android:clickable="true"
                    android:layout_marginStart="10dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp" >
                <TextView
                    android:id="@+id/textGuest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Guest"
                    android:textColor="?attr/colorOnSurface" />

                <TextView
                    android:id="@+id/GuestLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/Login_Guest"
                    android:textColor="?attr/colorSecondary"
                    android:clickable="true"
                    android:layout_marginStart="10dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>