<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="?android:attr/colorPrimary"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:id="@+id/logoutIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/Logout"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:padding="6dp"
                android:gravity="start">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    app:srcCompat="@drawable/back"
                    android:contentDescription="@string/Back"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/Back"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:textSize="18sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgUser"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:scaleType="fitXY"
                android:background="@drawable/circle_photo_bg"
                app:shapeAppearanceOverlay="@style/CircularShapeAppearance"
                android:layout_gravity="center"
                android:layout_marginBottom="18dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTilName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/Name"
                app:startIconDrawable="@drawable/ic_form_user"
                app:boxStrokeColor="?attr/colorOnSurface"
                app:hintTextColor="?attr/colorOnSurface"
                app:counterEnabled="false"
                app:counterMaxLength="30">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="?attr/colorOnSurface"
                    android:digits="@string/validation_name"
                    android:maxLength="30"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTilLastname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Lastname"
                app:startIconDrawable="@drawable/ic_form_user"
                app:boxStrokeColor="?attr/colorOnSurface"
                app:hintTextColor="?attr/colorOnSurface"
                app:counterEnabled="false"
                app:counterMaxLength="30">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEtLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="?attr/colorOnSurface"
                    android:digits="@string/validation_last_name"
                    android:maxLength="30"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTilBirthday"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Birthday"
                app:startIconDrawable="@drawable/ic_form_calendar"
                app:boxStrokeColor="?attr/colorOnSurface"
                app:hintTextColor="?attr/colorOnSurface"
                app:counterEnabled="false"
                app:counterMaxLength="10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEtBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusable="false"
                    android:textColor="?attr/colorOnSurface"
                    android:digits="@string/validation_birthday"
                    android:maxLength="10"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTilPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Phone"
                app:startIconDrawable="@drawable/ic_form_phone"
                app:boxStrokeColor="?attr/colorOnSurface"
                app:hintTextColor="?attr/colorOnSurface"
                app:counterEnabled="false"
                app:counterMaxLength="10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="?attr/colorOnSurface"
                    android:digits="@string/validation_phone"
                    android:maxLength="10"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Email"
                app:startIconDrawable="@drawable/ic_form_email"
                app:boxStrokeColor="?attr/colorOnSurface"
                app:hintTextColor="?attr/colorOnSurface"
                app:counterEnabled="false"
                app:counterMaxLength="30">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="?attr/colorOnSurface"
                    android:digits="@string/validation_email"
                    android:maxLength="30"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/Update"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/button_background"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>