<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="30dp"
            android:gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgUser"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:scaleType="fitXY"
                android:background="@drawable/circle_photo_bg"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/CircularShapeAppearance" />

            <Button
                android:id="@+id/btnAddPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Photo"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/imgUser"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_gravity="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTilName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/Name"
                app:startIconDrawable="@drawable/ic_form_user"
                app:boxStrokeColor="?attr/colorOnSurface"
                app:hintTextColor="?attr/colorOnSurface"
                app:counterEnabled="false"
                app:counterMaxLength="30"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="?attr/colorOnSurface"
                    android:digits="@string/validation_name"
                    android:maxLength="30"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTilLastname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Lastname"
                app:startIconDrawable="@drawable/ic_form_user"
                app:boxStrokeColor="?attr/colorOnSurface"
                app:hintTextColor="?attr/colorOnSurface"
                app:counterEnabled="false"
                app:counterMaxLength="30"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEtLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="?attr/colorOnSurface"
                    android:digits="@string/validation_name"
                    android:maxLength="30"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTilBirthday"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Birthday"
                app:startIconDrawable="@drawable/ic_form_calendar"
                app:boxStrokeColor="?attr/colorOnSurface"
                app:hintTextColor="?attr/colorOnSurface"
                app:counterEnabled="false"
                app:counterMaxLength="10"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEtBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusable="false"
                    android:textColor="?attr/colorOnSurface"
                    android:digits="@string/validation_birthday"
                    android:maxLength="10"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTilPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Phone"
                app:startIconDrawable="@drawable/ic_form_phone"
                app:boxStrokeColor="?attr/colorOnSurface"
                app:hintTextColor="?attr/colorOnSurface"
                app:counterEnabled="false"
                app:counterMaxLength="10"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="?attr/colorOnSurface"
                    android:digits="@string/validation_phone"
                    android:maxLength="10"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Email"
                app:startIconDrawable="@drawable/ic_form_email"
                app:boxStrokeColor="?attr/colorOnSurface"
                app:hintTextColor="?attr/colorOnSurface"
                app:counterEnabled="false"
                app:counterMaxLength="30"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="?attr/colorOnSurface"
                    android:digits="@string/validation_email"
                    android:maxLength="30"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/Update"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/button_background"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>